fix(mobile): fix mobile layout issues

--- a/astro_2.0/components/DaoDetails/DaoDetailsGrid.module.scss
+++ b/astro_2.0/components/DaoDetails/DaoDetailsGrid.module.scss
@@ -76,12 +76,31 @@
 .name {
   @include font(28px, 28px, 700);
   font-family: 'Roboto', 'sans-serif';
+
+  @include astro-mobile {
+    font-size: 20px;
+    > div {
+      @include ellipse-text;
+      max-width: 180px;
+    }
+  }
 }
 
 .address {
   @include font(16px, 24px, 500);
+  align-items: center;
   color: var(--color-neutral-60);
+  display: flex;
+  margin-top: 8px;
   word-break: break-all;
+
+  @include astro-mobile {
+    font-size: 14px;
+    > div {
+      @include ellipse-text;
+      max-width: 180px;
+    }
+  }
 }
 
 .copyAddress {
@@ -94,11 +113,7 @@
   @include font(16px, 24px, 400);
   height: 72px;
   overflow: hidden;
-  padding: 0 16px;
-
-  @include tablet-portrait {
-    padding: 0 24px;
-  }
+  padding: 0 24px;
 }
 
 .fundsAndMembers {
