--- a/astro_2.0/components/DaoDetails/components/DaoGeneralCard/DaoGeneralCard.module.scss
+++ b/astro_2.0/components/DaoDetails/components/DaoGeneralCard/DaoGeneralCard.module.scss
@@ -133,6 +133,8 @@
     justify-content: center;
 
     .displayName {
+      @include ellipse-text;
+      line-height: 1.2;
       text-align: center;
     }
 
