--- a/astro_2.0/components/DaoFlagWidget/DaoFlag.module.scss
+++ b/astro_2.0/components/DaoFlagWidget/DaoFlag.module.scss
@@ -38,7 +38,7 @@
   .info {
     div {
       @include ellipse-text;
-      max-width: 50vw;
+      max-width: 40vw;
     }
   }
 }
