--- a/astro_2.0/features/CreateDao/components/DaoLinksForm/components/DaoLinkLine/DaoLinkLine.module.scss
+++ b/astro_2.0/features/CreateDao/components/DaoLinksForm/components/DaoLinkLine/DaoLinkLine.module.scss
@@ -9,6 +9,7 @@
 .deleteBtn {
   color: var(--color-error-70);
   flex-shrink: 0;
+  margin-left: 16px;
 }
 
 .validationWrapper {
