--- a/astro_2.0/features/CreateDao/components/SubjectRule/SubjectRule.module.scss
+++ b/astro_2.0/features/CreateDao/components/SubjectRule/SubjectRule.module.scss
@@ -34,6 +34,10 @@
     flex-wrap: nowrap;
   }
 
+  > div {
+    margin-bottom: 16px;
+  }
+
   > div:not(:last-of-type) {
     margin-right: 16px;
   }
