--- a/pages/dao/[dao]/governance/settings/SettingsPage.module.scss
+++ b/pages/dao/[dao]/governance/settings/SettingsPage.module.scss
@@ -61,6 +61,10 @@
     flex-direction: row;
   }
 
+  > div {
+    margin-bottom: 24px;
+  }
+
   > div:not(:last-of-type) {
     margin-right: 24px;
   }
